--- a/src/docs/FontAwesomeIcons.mdx
+++ b/src/docs/FontAwesomeIcons.mdx
@@ -1,8 +1,10 @@
-import { Source } from '@storybook/blocks';
+import { Meta, Source } from '@storybook/blocks';
 
 import { FaIconsBlock } from '../../.storybook/blocks/FaIconsBlock';
 
-# Icons
+<Meta title="Docs/Font Awesome Icons" />
+
+# Font Awesome Icons
 
 This project includes Font Awesome, the Internet's icon library and toolkit, used by millions of designers, developers, and content creators. For additional information on the Font Awesome library, visit <a href="https://fontawesome.com">fontawesome.com</a>.
 
@@ -10,10 +12,9 @@ Icons can be included in any React component by including the following code sni
 
 <Source
   code={`
-import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
-import { faBars } from '@fortawesome/free-solid-svg-icons';
+import FontAwesomeIcon from 'components/helpers/FontAwesomeIcon/FontAwesomeIcon';
 
-<FontAwesomeIcon icon={faBars} />
+<FontAwesomeIcon icon="spinner" />
 `} />
 
 <FaIconsBlock />
